--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -3,9 +3,13 @@
         "message": "The add-on enhances your email inbox experience through AI (LLM) support.",
         "description": "Description of the add-on."
     },
-    "menuAiSupport": {
-        "message": "AI support",
-        "description": "Menu with all AI support options."
+    "errorInvalidaddonOptions": {
+        "message": "Options are invalid. Configure the necessary settings for the \"AI Mail Support\" add-on.",
+        "description": "Text displayed when the add-on options are invalid and an attempt is made to invoke one of the options that requires the configuration of an AI system."
+    },
+    "errorTextNotFound": {
+        "message": "Unable to retrieve text for processing.",
+        "description": "Text displayed when text cannot be retrieved for processing."
     },
     "mailListen": {
         "message": "Listen",
@@ -39,65 +43,13 @@
         "message": "Translate and…",
         "description": "Submenu option to translate the content of an email or a portion of it and apply other operation"
     },
-    "thinking": {
-        "message": "I'm thinking!",
-        "description": "Text displayed when waiting for a response from remote services."
-    },
-    "errorInvalidaddonOptions": {
-        "message": "Options are invalid. Configure the necessary settings for the \"AI Mail Support\" add-on.",
-        "description": "Text displayed when the add-on options are invalid and an attempt is made to invoke one of the options that requires the configuration of an AI system."
-    },
-    "errorTextNotFound": {
-        "message": "Unable to retrieve text for processing.",
-        "description": "Text displayed when text cannot be retrieved for processing."
+    "menuAiSupport": {
+        "message": "AI support",
+        "description": "Menu with all AI support options."
     },
     "options": {
         "message": "Options",
         "description": "General options menu."
-    },
-    "options.testSuccessful": {
-        "message": "Test completed successfully!",
-        "description": "Text displayed when the integration test initiated through its respective CTA in the options window has been successfully completed."
-    },
-    "options.savedPreferences": {
-        "message": "Saved preferences",
-        "description": "Preferences that have been saved."
-    },
-    "options.errorOwlForExchangeBug": {
-        "message": "<b>WARNING</b>: It appears that at least one of your accounts is using the Owl for Exchange add-on, which has a bug with Thunderbird's official <a href=\"https://webextension-api.thunderbird.net/en/115/messageDisplayScripts.html\">messageDisplayScripts API</a>.<br>This will prevent the 'AI Mail Support' add-on from functioning when working with Exchange or Office365 accounts.",
-        "description": "The text displayed on the options page when at least one account managed by the Owl for Exchange is founded."
-    },
-    "options.mainUserLanguage": {
-        "message": "Primary language",
-        "description": "Primary language that the user can select."
-    },
-    "options.mainUserLanguage.description": {
-        "message": "Primary output language that will be attempted to be used in all integrations.",
-        "description": "Choosing a primary language ensures consistent communication across all platforms and integrations."
-    },
-    "options.llmProvider": {
-        "message": "AI Service Provider",
-        "description": "Provider of LLM services."
-    },
-    "options.llmProvider.default": {
-        "message": "Select a provider",
-        "description": "Default prompt to select a provider."
-    },
-    "options.llmProvider.description": {
-        "message": "Select the AI service provider (LLM) to be used for all integrations.<p><b>Attention:</b> make sure to configure the various options consciously, both concerning the content aspects managed by the provider and regarding the service costs.</p>",
-        "description": "Description of the LLM provider selection."
-    },
-    "options.servicesTimeout": {
-        "message": "Services Timeout (seconds)",
-        "description": "Timeout for services response in seconds."
-    },
-    "options.testButton": {
-        "message": "Test",
-        "description": "Button used for testing purposes."
-    },
-    "options.saveButton": {
-        "message": "Save",
-        "description": "Button used to save settings or preferences."
     },
     "options.anthropic.apiKey": {
         "message": "API Key*",
@@ -111,6 +63,14 @@
         "message": "Model*",
         "description": "Model to be used for all text processing: https://docs.anthropic.com/en/docs/about-claude/models"
     },
+    "options.debugMode": {
+        "message": "Enable debug mode",
+        "description": "Enabling debug mode allows for a more detailed analysis of the add-on's behavior, e.g., by enabling console logging."
+    },
+    "options.errorOwlForExchangeBug": {
+        "message": "<b>WARNING</b>: It appears that at least one of your accounts is using the Owl for Exchange add-on, which has a bug with Thunderbird's official <a href=\"https://webextension-api.thunderbird.net/en/115/messageDisplayScripts.html\">messageDisplayScripts API</a>.<br>This will prevent the 'AI Mail Support' add-on from functioning when working with Exchange or Office365 accounts.",
+        "description": "The text displayed on the options page when at least one account managed by the Owl for Exchange is founded."
+    },
     "options.google.apiKey": {
         "message": "API Key*",
         "description": "API key field for Google Gemini."
@@ -118,6 +78,26 @@
     "options.google.apiKey.description": {
         "message": "Go to the <a href=\"https://ai.google.dev\">Google AI for Developers</a> site to retrieve or create a key.",
         "description": "Description of the API Key section with details on how to retrieve it from the official Google AI for Developers website."
+    },
+    "options.llmProvider": {
+        "message": "AI Service Provider",
+        "description": "Provider of LLM services."
+    },
+    "options.llmProvider.default": {
+        "message": "Select a provider",
+        "description": "Default prompt to select a provider."
+    },
+    "options.llmProvider.description": {
+        "message": "Select the AI service provider (LLM) to be used for all integrations.<p><b>Attention:</b> make sure to configure the various options consciously, both concerning the content aspects managed by the provider and regarding the service costs.</p>",
+        "description": "Description of the LLM provider selection."
+    },
+    "options.mainUserLanguage": {
+        "message": "Primary language",
+        "description": "Primary language that the user can select."
+    },
+    "options.mainUserLanguage.description": {
+        "message": "Primary output language that will be attempted to be used in all integrations.",
+        "description": "Choosing a primary language ensures consistent communication across all platforms and integrations."
     },
     "options.openai.apiKey": {
         "message": "API Key*",
@@ -127,6 +107,10 @@
         "message": "Go to the <a href=\"https://platform.openai.com/api-keys\">API keys</a> section to retrieve or create a key.",
         "description": "Description of the API Key section with details on how to retrieve it from the official OpenAI website."
     },
+    "options.openai.model": {
+        "message": "Model*",
+        "description": "Model to be used for all text processing: https://platform.openai.com/docs/models/overview"
+    },
     "options.openai.organizationId": {
         "message": "Organization",
         "description": "Organization field for OpenAI GPT."
@@ -134,10 +118,6 @@
     "options.openai.organizationId.description": {
         "message": "For users belonging to multiple organizations, the (optional) value is used to specify which organization is actually utilized for a call, allowing for accurate counting.",
         "description": "Description of the organization field: https://platform.openai.com/docs/api-reference/organization-optional."
-    },
-    "options.openai.model": {
-        "message": "Model*",
-        "description": "Model to be used for all text processing: https://platform.openai.com/docs/models/overview"
     },
     "options.openai.text2speech": {
         "message": "Text 2 Speech:",
@@ -155,6 +135,10 @@
         "message": "Higher quality",
         "description": "Description of higher-quality model, but without guaranteed low latency."
     },
+    "options.openai.text2speech.speed": {
+        "message": "Speed* (<span class=\"monospace\"></span>x)",
+        "description": "The speed of the generated audio."
+    },
     "options.openai.text2speech.voice": {
         "message": "Voice*",
         "description": "The voice to use when generating the audio: https://platform.openai.com/docs/guides/text-to-speech/voice-options."
@@ -163,8 +147,28 @@
         "message": "The audio preview of the various voices is the English one proposed by OpenAI and is not influenced by the configuration options present in this panel.",
         "description": "Explanation that the preview voices are the official English voices provided by OpenAI and that they are not influenced by the options available in the add-on panel."
     },
-    "options.openai.text2speech.speed": {
-        "message": "Speed* (<span class=\"monospace\"></span>x)",
-        "description": "The speed of the generated audio."
+    "options.savedPreferences": {
+        "message": "Saved preferences",
+        "description": "Preferences that have been saved."
+    },
+    "options.saveButton": {
+        "message": "Save",
+        "description": "Button used to save settings or preferences."
+    },
+    "options.servicesTimeout": {
+        "message": "Services Timeout (seconds)",
+        "description": "Timeout for services response in seconds."
+    },
+    "options.testButton": {
+        "message": "Test",
+        "description": "Button used for testing purposes."
+    },
+    "options.testSuccessful": {
+        "message": "Test completed successfully!",
+        "description": "Text displayed when the integration test initiated through its respective CTA in the options window has been successfully completed."
+    },
+    "thinking": {
+        "message": "I'm thinking!",
+        "description": "Text displayed when waiting for a response from remote services."
     }
 }
