--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -2,8 +2,11 @@
     "addonDescription": {
         "message": "L'estensione ottimizza l'esperienza della tua caselle di posta tramite il supporto AI (LLM)."
     },
-    "menuAiSupport": {
-        "message": "Supporto AI"
+    "errorInvalidAddonOptions": {
+        "message": "Le opzioni non sono valide. Configura le impostazioni necessarie per l'estensione \"AI Mail Support\"."
+    },
+    "errorTextNotFound": {
+        "message": "Impossibile recuperare il testo per l'elaborazione."
     },
     "mailListen": {
         "message": "Ascolta"
@@ -29,50 +32,11 @@
     "mailTranslateAnd": {
         "message": "Traduci e…"
     },
-    "thinking": {
-        "message": "Sto pensando!"
-    },
-    "errorInvalidAddonOptions": {
-        "message": "Le opzioni non sono valide. Configura le impostazioni necessarie per l'estensione \"AI Mail Support\"."
-    },
-    "errorTextNotFound": {
-        "message": "Impossibile recuperare il testo per l'elaborazione."
+    "menuAiSupport": {
+        "message": "Supporto AI"
     },
     "options": {
         "message": "Impostazioni"
-    },
-    "options.testSuccessful": {
-        "message": "Test completato con successo!"
-    },
-    "options.savedPreferences": {
-        "message": "Preferenze salvate"
-    },
-    "options.errorOwlForExchangeBug": {
-        "message": "<b>ATTENZIONE</b>: Sembra che almeno uno dei tuoi account usi l'estensione Owl for Exchange (Gufo per Exchange), che ha un bug con le <a href=\"https://webextension-api.thunderbird.net/en/115/messageDisplayScripts.html\">messageDisplayScripts API ufficiali di Thunderbird</a>.<br>Questo impedirà all'estensione di \"AI Mail Support\" di funzionare quando si lavora su account Exchange od Office365."
-    },
-    "options.mainUserLanguage": {
-        "message": "Lingua principale"
-    },
-    "options.mainUserLanguage.description": {
-        "message": "Lingua principale di output che si proverà ad usare in tutte le integrazioni."
-    },
-    "options.llmProvider": {
-        "message": "Provider di servizi AI"
-    },
-    "options.llmProvider.default": {
-        "message": "Seleziona un fornitore"
-    },
-    "options.llmProvider.description": {
-        "message": "Seziona il fornitore di servizi AI (LLM) che verrà usato per tutte le integrazioni.<p><b>Attenzione:</b> assicurati di configurare le varie opzioni in modo consapevole, sia in relazione agli aspetti di contenuto che verranno gestiti dal provider, che in relazione ai costi del servizio.</p>"
-    },
-    "options.servicesTimeout": {
-        "message": "Timeout servizi (secondi)"
-    },
-    "options.testButton": {
-        "message": "Testa"
-    },
-    "options.saveButton": {
-        "message": "Salva"
     },
     "options.anthropic.apiKey": {
         "message": "Chiave API*"
@@ -83,11 +47,32 @@
     "options.anthropic.model": {
         "message": "Modello*"
     },
+    "options.debugMode": {
+        "message": "Abilita modalità di debug"
+    },
+    "options.errorOwlForExchangeBug": {
+        "message": "<b>ATTENZIONE</b>: Sembra che almeno uno dei tuoi account usi l'estensione Owl for Exchange (Gufo per Exchange), che ha un bug con le <a href=\"https://webextension-api.thunderbird.net/en/115/messageDisplayScripts.html\">messageDisplayScripts API ufficiali di Thunderbird</a>.<br>Questo impedirà all'estensione di \"AI Mail Support\" di funzionare quando si lavora su account Exchange od Office365."
+    },
     "options.google.apiKey": {
         "message": "Chiave API*"
     },
     "options.google.apiKey.description": {
         "message": "Vai sul sito <a href=\"https://ai.google.dev\">Google AI for Developers</a> per recuperare o creare una chiave."
+    },
+    "options.llmProvider": {
+        "message": "Provider di servizi AI"
+    },
+    "options.llmProvider.default": {
+        "message": "Seleziona un fornitore"
+    },
+    "options.llmProvider.description": {
+        "message": "Seziona il fornitore di servizi AI (LLM) che verrà usato per tutte le integrazioni.<p><b>Attenzione:</b> assicurati di configurare le varie opzioni in modo consapevole, sia in relazione agli aspetti di contenuto che verranno gestiti dal provider, che in relazione ai costi del servizio.</p>"
+    },
+    "options.mainUserLanguage": {
+        "message": "Lingua principale"
+    },
+    "options.mainUserLanguage.description": {
+        "message": "Lingua principale di output che si proverà ad usare in tutte le integrazioni."
     },
     "options.openai.apiKey": {
         "message": "Chiave API*"
@@ -95,14 +80,14 @@
     "options.openai.apiKey.description": {
         "message": "Vai nella sezione <a href=\"https://platform.openai.com/api-keys\">API keys</a> per recuperare o creare una chiave."
     },
+    "options.openai.model": {
+        "message": "Modello*"
+    },
     "options.openai.organizationId": {
         "message": "Organizzazione"
     },
     "options.openai.organizationId.description": {
         "message": "Per utenti che appartengono a più organizzazioni, il valore (opzionale) è usato per specificare quale organizzazione è usata per una chiamata, permettendo così un conteggio accurato."
-    },
-    "options.openai.model": {
-        "message": "Modello*"
     },
     "options.openai.text2speech": {
         "message": "Text 2 Speech:"
@@ -116,13 +101,31 @@
     "options.openai.text2speech.audioQuality.tts1hd": {
         "message": "Qualità più alta"
     },
+    "options.openai.text2speech.speed": {
+        "message": "Velocità* (<span class=\"monospace\"></span>x)"
+    },
     "options.openai.text2speech.voice": {
         "message": "Voce*"
     },
     "options.openai.text2speech.voice.description": {
         "message": "L'anteprima audio delle varie voci è quella inglese proposta da OpenAI e non è influenzata dalla opzioni di configurazioni presenti in questo pannello."
     },
-    "options.openai.text2speech.speed": {
-        "message": "Velocità* (<span class=\"monospace\"></span>x)"
+    "options.saveButton": {
+        "message": "Salva"
+    },
+    "options.savedPreferences": {
+        "message": "Preferenze salvate"
+    },
+    "options.servicesTimeout": {
+        "message": "Timeout servizi (secondi)"
+    },
+    "options.testButton": {
+        "message": "Testa"
+    },
+    "options.testSuccessful": {
+        "message": "Test completato con successo!"
+    },
+    "thinking": {
+        "message": "Sto pensando!"
     }
 }
