--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -2,6 +2,9 @@
     "addonDescription": {
         "message": "L'estensione ottimizza l'esperienza della tua caselle di posta tramite il supporto AI (LLM)."
     },
+    "errorGoogleGeminiSafetyThresholdExceeded": {
+        "message": "Soglia di sicurezza superata."
+    },
     "errorInvalidAddonOptions": {
         "message": "Le opzioni non sono valide. Configura le impostazioni necessarie per l'estensione \"AI Mail Support\"."
     },
@@ -109,6 +112,12 @@
     },
     "options.llmProvider.description": {
         "message": "Seleziona il fornitore di servizi AI (LLM) che verrà usato per tutte le integrazioni.<p><b>Attenzione:</b> assicurati di configurare le varie opzioni in modo consapevole, sia in relazione agli aspetti di contenuto che verranno gestiti dal provider, che in relazione ai costi del servizio.</p>"
+    },
+    "options.llmTemperature": {
+        "message": "Temperatura (<span class=\"monospace\"></span>x)"
+    },
+    "options.llmTemperature.description": {
+        "message": "Valori più alti come 0.8 renderanno l'output più casuale, mentre valori più bassi come 0.2 lo renderanno più focalizzato e deterministico.<p><b>Attenzione:</b> modelli LLM con range di temperatura diversi da 0 a 2, vengono normalizzati rispetto al loro intervallo di riferimento.</p>"
     },
     "options.mainUserLanguage": {
         "message": "Lingua principale"
