--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -179,6 +179,9 @@
     "options.mainUserLanguage.description": {
         "message": "Lingua principale di output che si proverà ad usare in tutte le integrazioni."
     },
+    "options.ollama.listModelsButton": {
+        "message": "Elenca modelli"
+    },
     "options.ollama.model": {
         "message": "Modello*"
     },
