Continuation of Work Version 0.88
	•	Library updates;
	•	Remove SVG close icon in favor of CSS solution;
	•	Progress with Ollama.

--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -183,7 +183,7 @@
         "message": "Elenca modelli"
     },
     "options.ollama.description": {
-        "message": "Ollama è un progetto open source che permette di utilizzare diversi LLM avanzati in locale, direttamente sul proprio computer e senza bisogno di collegarsi ad un server esterno.<br />È possibile scaricare il tutto dal <a href=\"https://ollama.com/download\">sito ufficiale</a>."
+        "message": "Ollama è un progetto open source che permette di utilizzare diversi LLM avanzati in locale, senza bisogno di collegarsi ad un server esterno.<br />È possibile scaricare il tutto dal <a href=\"https://ollama.com/download\">sito ufficiale</a>."
     },
     "options.ollama.model": {
         "message": "Modello*"
