--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -240,7 +240,7 @@
         "description": "Choosing a primary language ensures consistent communication across all platforms and integrations."
     },
     "options.ollama.description": {
-        "message": "Ollama is an open-source project that allows you to use various advanced LLMs locally, directly on your own computer and without needing to connect to an external server.<br />You can download everything from the <a href=\"https://ollama.com/download\">official website</a>.",
+        "message": "Ollama is an open-source project that allows you to use various advanced LLMs locally, without needing to connect to an external server.<br />You can download everything from the <a href=\"https://ollama.com/download\">official website</a>.",
         "description": "Message displayed when the LLM service provider Ollama is selected."
     },
     "options.ollama.listModelsButton": {
