Continuation of Work Version 0.88
	•	Library updates;
	•	Ollama integration completed;
	•	Start of groq services integration.

--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -243,6 +243,10 @@
         "message": "Ollama is an open-source project that allows you to use various advanced LLMs locally, without needing to connect to an external server.<br />You can download everything from the <a href=\"https://ollama.com/download\">official website</a>.",
         "description": "Message displayed when the LLM service provider Ollama is selected."
     },
+    "options.ollama.errorApi": {
+        "message": "<strong>Attention</strong>: Unable to communicate with Ollama. Please ensure that it is running and that the origin for invocation from Thunderbird has been <a href=\"https://github.com/ollama/ollama/blob/main/docs/faq.md#how-can-i-allow-additional-web-origins-to-access-ollama\">properly configured</a> by enabling <code>moz-extension://*</code> as indicated in <a href=\"https://github.com/ollama/ollama/blob/main/docs/faq.md#how-do-i-configure-ollama-server\">this section</a>.<br />For example, in macOS use: <code>launchctl setenv OLLAMA_ORIGINS \"moz-extension://*\"</code>.",
+        "description": "Error message displayed in case of inability to call the local Ollama APIs or if CORS is not configured."
+    },
     "options.ollama.listModelsButton": {
         "message": "List models",
         "description": "List locally available Ollama models"
@@ -251,9 +255,13 @@
         "message": "Model*",
         "description": "Model to be used for all text processing: https://ollama.com/library"
     },
-    "options.ollama.errorApi": {
-        "message": "<strong>Attention</strong>: Unable to communicate with Ollama. Please ensure that it is running and that the origin for invocation from Thunderbird has been <a href=\"https://github.com/ollama/ollama/blob/main/docs/faq.md#how-can-i-allow-additional-web-origins-to-access-ollama\">properly configured</a> by enabling <code>moz-extension://*</code> as indicated in <a href=\"https://github.com/ollama/ollama/blob/main/docs/faq.md#how-do-i-configure-ollama-server\">this section</a>.<br />For example, in macOS use: <code>launchctl setenv OLLAMA_ORIGINS \"moz-extension://*\"</code>.",
-        "description": "Error message displayed in case of inability to call the local Ollama APIs or if CORS is not configured."
+    "options.ollama.serviceUrl": {
+        "message": "Ollama services URL",
+        "description": "This option allows configuring the URL of the REST services used by Ollama: https://github.com/ollama/ollama/blob/main/docs/api.md."
+    },
+    "options.ollama.serviceUrl.description": {
+        "message": "Ollama can be run locally (URL: <code>http://localhost:11434</code>), or on a separate machine that can be accessed by specifying the target URL or IP address.",
+        "description": "Description explaining the target URL for invoking Ollama services"
     },
     "options.ollama.warningNoModel": {
         "message": "<strong>Attention</strong>: No model found in Ollama, please proceed to install a model, e.g. Llama, as indicated on the <a href=\"https://ollama.com/library\">official website</a>.",
