Continuation of Work Version 0.8
	•	Library updates;
	•	Fix for temperature parameter handling in Google Gemini.
	•	Removal of the Google Gemini 1.0 Pro model, now deprecated and scheduled for removal on February 15, 2025;
	•	Start of integration with xAI Grok;
	•	README.md update.

--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -354,5 +354,13 @@
     "thinking": {
         "message": "I'm thinking!",
         "description": "Text displayed when waiting for a response from remote services."
+    },
+    "options.xai.apiKey": {
+        "message": "API Key*",
+        "description": "API key field for xAI Grok."
+    },
+    "options.xai.apiKey.description": {
+        "message": "Go to the <a href=\"https://console.x.ai\">xAI console</a> site to retrieve or create a key.",
+        "description": "Description of the website where it is possible to generate an API access key."
     }
 }
